--- a/images/index.html
+++ b/images/index.html
@@ -7,13 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Food Panda Website</title>
 </head>
 
 <body>
-
+    <section>
+        <div class="div-width">
+            <h1><span>Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you! click the link to
+                get easy and fast order with 10% cash back bonous for your first order.</p>
+            <a class="button" href="https://www.foodpanda.com.bd/">Order Food</a>
+        </div>
+        <div class="div-width">
+            <img src="Final/mus-final.png" alt="Eating burgar">
+        </div>
+    </section>
 </body>
 
 </html>
