--- a/index.html
+++ b/index.html
@@ -20,10 +20,25 @@
             <h1>With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you! click the link to
                 get easy and fast order with 10% cash back bonous for your first order.</p>
-            <a class="button" href="https://www.foodpanda.com.bd/">Order Food</a>
+            <a class="button" href="https://www.foodpanda.com.bd/" target="_blank">Order Food</a>
         </div>
         <div class="div-width">
-            <img src="Final/mus-final.png" alt="Eating burgar">
+            <img src="Final/mus-final.png" alt=" Mus Eating burgar">
+        </div>
+    </section>
+    <section class="back-g-img">
+        <div class="div-width">
+            <img src="Final/mus-b.png" alt="Mus brother eating another burgar">
+        </div>
+        <div class="div-width">
+            <h1>About Food Panda</h1>
+            <p>Food Panda is a online food order platform in Bangladesh. They have many branches all over the country
+                and they provide service as an averange quality. They use bike riders to deliver their food to their
+                customers. Consumers can order food from anyplace and anytime they want. Their food will be on your door
+                step on time.</p>
+            <a class="button" href="https://www.restaurant.foodpanda.sg/s/?language=en_US&countryIsoCode=BD"
+                target="_blank">Get
+                Started</a>
         </div>
     </section>
 </body>
