--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 </head>
 
 <body>
-    <section>
-        <div class="div-width">
-            <h1><span>Skip</span> The Diet,</h1>
-            <h1>Just Eat Healthy</h1>
-            <h1>With Food Network</h1>
+    <section class="block">
+        <div class="div-width top-padding">
+            <h1 class="f-size"><span>Skip</span> The Diet,</h1>
+            <h1 class="f-size">Just Eat Healthy</h1>
+            <h1 class="f-size">With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you! click the link to
                 get easy and fast order with 10% cash back bonous for your first order.</p>
             <a class="button" href="https://www.foodpanda.com.bd/" target="_blank">Order Food</a>
         </div>
         <div class="div-width">
-            <img src="Final/mus-final.png" alt=" Mus Eating burgar">
+            <img src="Final/BB2.jpeg" alt="Baby eating">
         </div>
     </section>
-    <section class="back-g-img">
+    <section class="block back-g-img">
         <div class="div-width">
-            <img src="Final/mus-b.png" alt="Mus brother eating another burgar">
+            <img src="Final/BB1.jpg" alt="Another Baby eating">
         </div>
-        <div class="div-width">
+        <div class="div-width top-padding">
             <h1>About Food Panda</h1>
             <p>Food Panda is a online food order platform in Bangladesh. They have many branches all over the country
                 and they provide service as an averange quality. They use bike riders to deliver their food to their
@@ -39,6 +39,43 @@
             <a class="button" href="https://www.restaurant.foodpanda.sg/s/?language=en_US&countryIsoCode=BD"
                 target="_blank">Get
                 Started</a>
+        </div>
+    </section>
+    <section>
+        <div class="text-ali-heading ">
+            <h1>My Recipies</h1>
+            <p class="text-color">I have three main dish in the menu for today. One is seafood another one is normal
+                deseart and another
+                one is
+                spice food. <br>They are all delecious.Choose any one from these three.</p>
+        </div>
+        <div class="menu-box">
+            <div class="food-menu">
+                <img class="img-position" src="Final/Project Cover5.png" alt="">
+                <div class="text-ali">
+                    <h2>Salad Dish</h2>
+                    <p class="text-color">A very healthy dish decorated with organic food and vegitable items. A very
+                        good choice for
+                        healthy
+                        diet.</p>
+                </div>
+            </div>
+            <div class="food-menu">
+                <img class="img-position" src="Final/Project Cover7.png" alt="">
+                <div class="text-ali">
+                    <h2>Spice salad</h2>
+                    <p class="text-color">Salad mixed with organic vergitable and olive oil. Very good for stomach.</p>
+                </div>
+            </div>
+
+            <div class="food-menu">
+                <img class="img-position" src="Final/Project Cover8.png" alt="">
+                <div class="text-ali">
+                    <h2>Sea vegitable</h2>
+                    <p class="text-color">vegitable with traditional dish and fruits. Ideal to make a fresh start of the
+                        day.</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
