--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="block">
+    <section class="block ">
         <div class="div-width top-padding">
             <h1 class="f-size"><span>Skip</span> The Diet,</h1>
             <h1 class="f-size">Just Eat Healthy</h1>
@@ -26,7 +26,7 @@
             <img src="Final/BB2.jpeg" alt="Baby eating">
         </div>
     </section>
-    <section class="block back-g-img">
+    <section class="block backg-img1">
         <div class="div-width">
             <img src="Final/BB1.jpg" alt="Another Baby eating">
         </div>
