--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
     <section>
-        <div class="text-ali-heading ">
+        <div class="text-ali-heading">
             <h1>My Recipies</h1>
             <p class="text-color">I have three main dish in the menu for today. One is seafood another one is normal
                 deseart and another
@@ -78,6 +78,12 @@
             </div>
         </div>
     </section>
+    <div class="company-details">
+        <footer class="text-ali-heading">
+            <h1 class="text-color"><span>Food</span> Network</h1>
+            <strong class="text-position">Eat healthy to live healthy.Live healthy to live happy.</strong>
+        </footer>
+    </div>
 </body>
 
 </html>
