added navigation bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    <ul>
+        <li><a class="navbar" href="www.google.com" target="_blank">Home</a></li>
+        <li><a class="navbar" href="www.google.com" target="_blank">Outlet</a></li>
+        <li><a class="navbar" href="www.google.com" target="_blank">About</a></li>
+        <li><a class="navbar" href="www.google.com" target="_blank">Login</a></li>
+    </ul>
     <section class="block ">
         <div class="div-width top-padding">
             <h1 class="f-size"><span>Skip</span> The Diet,</h1>
