--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 spice food. <br>They are all delecious.Choose any one from these three.</p>
         </div>
         <div class="menu-box">
-            <div class="food-menu">
+            <div class="shadow-box">
                 <img class="img-position" src="Final/Project Cover5.png" alt="">
                 <div class="text-ali">
                     <h2>Salad Dish</h2>
@@ -66,7 +66,7 @@
                         diet.</p>
                 </div>
             </div>
-            <div class="food-menu">
+            <div class="shadow-box">
                 <img class="img-position" src="Final/Project Cover7.png" alt="">
                 <div class="text-ali">
                     <h2>Spice salad</h2>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="food-menu">
+            <div class="shadow-box">
                 <img class="img-position" src="Final/Project Cover8.png" alt="">
                 <div class="text-ali">
                     <h2>Sea vegitable</h2>
@@ -82,6 +82,20 @@
                         day.</p>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="social-m-follower">
+        <div class="follower-text-position">
+            <h1 class="f-size">700k</h1>
+            <p class="text-color">Youtube Subscribers</p>
+        </div>
+        <div class="follower-text-position">
+            <h1 class="f-size">2.4m</h1>
+            <p class="text-color">Instagram Followers</p>
+        </div>
+        <div class="follower-text-position">
+            <h1 class="f-size">100k</h1>
+            <p class="text-color">Dribble Shot Likes</p>
         </div>
     </section>
     <div class="company-details">
