--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 Started</a>
         </div>
     </section>
-    <section>
-        <div class="text-ali-heading">
+    <section class="text-ali-heading">
+        <div>
             <h1>My Recipies</h1>
             <p class="text-color">I have three main dish in the menu for today. One is seafood another one is normal
                 deseart and another
@@ -57,7 +57,9 @@
         </div>
         <div class="menu-box">
             <div class="shadow-box">
-                <img class="img-position" src="Final/Project Cover5.png" alt="">
+                <div class="img-position">
+                    <img src="Final/Project Cover5.png" alt="">
+                </div>
                 <div class="text-ali">
                     <h2>Salad Dish</h2>
                     <p class="text-color">A very healthy dish decorated with organic food and vegitable items. A very
@@ -67,7 +69,9 @@
                 </div>
             </div>
             <div class="shadow-box">
-                <img class="img-position" src="Final/Project Cover7.png" alt="">
+                <div class="img-position">
+                    <img src="Final/Project Cover7.png" alt="">
+                </div>
                 <div class="text-ali">
                     <h2>Spice salad</h2>
                     <p class="text-color">Salad mixed with organic vergitable and olive oil. Very good for stomach.</p>
@@ -75,7 +79,9 @@
             </div>
 
             <div class="shadow-box">
-                <img class="img-position" src="Final/Project Cover8.png" alt="">
+                <div class="img-position">
+                    <img id="estee" src="Final/Project Cover8.png" alt="">
+                </div>
                 <div class="text-ali">
                     <h2>Sea vegitable</h2>
                     <p class="text-color">vegitable with traditional dish and fruits. Ideal to make a fresh start of the
